# ffmpeg_rtsp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: transcoder.hpp
src/: main.cpp  transcoder.cpp
working_examples/: frame_to_img.cpp  main_original.cpp  remuxing_main_workingGOOD.cpp
